Fix: Reduce collection section spacing on mobile and improve image gallery

--- a/css/product.css
+++ b/css/product.css
@@ -32,16 +32,16 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 60px;
     padding: 0;
 }
 
 .gallery-main {
     position: relative;
-    background-color: var(--background-soft);
+   margin-top: 2.2em;
     border: none;
     border-radius: 8px;
-    overflow: hidden;
+    overflow: visible;
     aspect-ratio: 1;
     display: flex;
     align-items: center;
@@ -54,23 +54,22 @@
 }
 
 .gallery-main img {
-    width: 200%;
-    height: 100%; 
+    width: 100%;
+   
       
-    object-fit: fill;
+    object-fit: contain;
     transition: opacity 0.3s;
-      /* transform: translateY(-20px); */
       
 }
 
 .gallery-arrow {
   position: absolute;
-  bottom: 2.7%;
-
-  width: 40px;
-  height: 40px;
+  bottom: -1%;
+   
+  width: 36px;
+  height: 36px;
   padding: 8px;
-  margin: 0px 5px;
+  margin: 0px 10px;
   background: transparent;
   border: 1px solid var(--primary-deep);
   border-radius: 50%;
@@ -140,6 +139,7 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 14px;
     width: 100%;
+    margin: 0 auto;
 }
 
 .thumbnail {
