--- a/css/responsive.css
+++ b/css/responsive.css
@@ -148,11 +148,17 @@ min-height: 250px;
 
        .collection-section
        {
-        gap: 60px;
+        padding: 50px 5% 0px;
+        gap: 100px;
+       
+        /* justify-content: space-around; */
+
        }
     .collection-section-left {
         width: 100%;
+        min-height: auto;
         align-items: center;
+        
         padding-bottom: 0px;
         margin-bottom: 0px;
     }
@@ -164,14 +170,15 @@ min-height: 250px;
     .collection-section-right {
         width: 100%;
         padding:0px 5px;
+         
     }
 
     .collection-section-right-image {
-        height: 70vh;
+        width: 100%;
     }
 
     .collection-section-right img {
-        max-width: 450px;
+        max-width: 600px;
     }
 
     .collection-items {
@@ -271,7 +278,7 @@ min-height: 250px;
 
     .badge-icon {
         width: 16px;
-        height: 16px;
+        height: auto;
     }
 
     .hero-stats {
@@ -336,15 +343,18 @@ min-height: 250px;
     }
 
     .gallery-main img {
-        width: 180%;
+        width: 100%;
     }
-
+  .collection-section
+  {
+     gap: 160px;
+  }
     .collection-section-right-image {
         height: 50vh;
     }
 
     .collection-section-right img {
-        max-width: 350px;
+        max-width: 450px;
     }
 
      .fragrance-selection {
